syntax = "proto3";

option go_package="pkg/service/proto";
import "google/protobuf/empty.proto";

message CustomEmoji {
    string id = 1;
    string type = 2;
    string emoji_url = 3;
    int32 width = 4;
    int32 height = 5;
}

message CustomEmojis {
    repeated CustomEmoji emojis = 1;
}

service CustomEmojiService {
    rpc GetCustomEmojis (google.protobuf.Empty) returns (CustomEmojis) {}
}